# svg-editor

./: .agents.yaml  .gitignore  .secrets.yaml  CLAUDE.md  Cargo.toml  README.md  claude-quality-review.md  claude-security-review.md  openrouter-review.md  review-profiles.yaml
.github/actions/agent-iteration-check/: action.yml
.github/actions/claude-review/: action.yml
.github/actions/openrouter-review/: action.yml
.github/actions/setup-nodejs/: action.yml
.github/workflows/: pr-validation.yml
fix-plan/: 01-critical-panics.md  02-security-issues.md  03-logic-errors.md  04-data-loss-races.md  05-performance-quality.md  README.md
src/: animation.rs  app.rs  canvas.rs  feedback.rs  layers.rs  main.rs  path_data.rs  project.rs  svg_edit.rs  svg_ops.rs  watcher.rs
