[package]
name = "svg-forge"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
resvg = "0.43"
usvg = "0.43"
tiny-skia = "0.11"
notify = "8"
roxmltree = "0.21"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
